# make_project_folder

./: README.md  pyproject.toml
make_project/: __init__.py  cli.py
